After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790595 - ev-application: Fix property name in about dialog
ev-application: Fix property name in about dialog
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-20 09:42 UTC by Stefano Facchini
Modified: 2017-11-20 17:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ev-application: Fix property name in about dialog (1.41 KB, patch)
2017-11-20 09:42 UTC, Stefano Facchini
committed Details | Review

Description Stefano Facchini 2017-11-20 09:42:09 UTC
Somehow a typo sneaked in when my previous patch was applied.
Comment 1 Stefano Facchini 2017-11-20 09:42:14 UTC
Created attachment 364032 [details] [review]
ev-application: Fix property name in about dialog

And remove a now-useless "wrap" property.
Comment 2 Carlos Garcia Campos 2017-11-20 17:19:38 UTC
(In reply to Stefano Facchini from comment #0)
> Somehow a typo sneaked in when my previous patch was applied.

I messed it up while manually applying the patch, because it didn't apply. I have this change locally, so it seems I forgot to git commit --amend before push.
Comment 3 Carlos Garcia Campos 2017-11-20 17:19:56 UTC
Comment on attachment 364032 [details] [review]
ev-application: Fix property name in about dialog

Thanks
Comment 4 Stefano Facchini 2017-11-20 17:49:14 UTC
Attachment 364032 [details] pushed as 76c0888 - ev-application: Fix property name in about dialog