ev-application: Fix property name in about dialog

And remove a now-useless "wrap" property.

https://bugzilla.gnome.org/show_bug.cgi?id=790595